sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: illegal start of simple expression
  while() {
        ^AlgCocktailSort1:15: error: ')' expected but '}' found.
} 
^