sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var nbValeurs=getNombreValeurs()
  while() {
  for (i<-0 to nbValeurs-2) {
    if (!plusPetit(i,i+1)) {
      echange (i, i+1)
    }
  }
  for (i<-nbValeurs-2 to 0)
  if (plusPetit(i,i+1)) {
    echange (i,i+1)
  }
}
}